--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ekachai Kanya - Portfolio</title>
+    <title>Watcharapong Nuannoi - Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
     <nav class="navbar">
-        <div class="logo">EK.</div>
+        <div class="logo">WN.</div>
         <ul class="nav-links">
             <li><a href="index.html" class="active">Home</a></li>
             <li><a href="about.html">About</a></li>
@@ -21,8 +21,9 @@
 
     <header class="hero">
         <div class="hero-content">
-            <h1>Hi, I'm Ekachai Kanya</h1>
-            <p>Creative Web Developer & UI/UX Design Enthusiast. Building digital experiences that matter.</p>
+            <h1>Hi, I'm Watcharapong Nuannoi ID 1670704608 </h1>
+            <p>Creative Web Developer & UI/UX Design Enthusiast. Building digital experiences that matter.</p> 
+            <p>Date 5 february 2026 </p>
             <a href="portfolio.html" class="btn">View My Work</a>
         </div>
     </header>
@@ -55,8 +56,8 @@
     </section>
 
     <footer>
-        <p>&copy; 2026 Ekachai Kanya. All rights reserved.</p>
-        <p>ekachai.k@bu.ac.th</p>
+        <p>&copy; 2026 Watcharapong Nuannoi ID 1670704608. All rights reserved.</p>
+        <p>Watcharapong.Nuan@bu.ac.th</p>
     </footer>
 
 </body>
