--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <div class="hero-content">
             <h1>Hi, I'm Watcharapong Nuannoi ID 1670704608 </h1>
             <p>Creative Web Developer & UI/UX Design Enthusiast. Building digital experiences that matter.</p> 
+            <p>Assignment04 CI/CD</p>
             <p>Date 5 february 2026 </p>
             <a href="portfolio.html" class="btn">View My Work</a>
         </div>
